<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/default_margin_padding_large"
    android:paddingLeft="@dimen/default_margin_padding_large"
    android:paddingRight="@dimen/default_margin_padding_large"
    android:paddingTop="@dimen/default_margin_padding_large"
    tools:context=".DoSomethingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_padding_large"
        android:text="@string/lets_do_something_with_knox_standard_sdk"
        android:textSize="@dimen/default_text_size" />

    <Button
        android:id="@+id/btn_1"
        style="@style/SimpleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_1" />

    <Button
        android:id="@+id/btn_2"
        style="@style/SimpleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_2" />

    <Button
        android:id="@+id/btn_3"
        style="@style/SimpleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_3" />

    <Button
        android:id="@+id/btn_4"
        style="@style/SimpleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_4" />
</LinearLayout>
